# maildrop

./: .gitignore  README.md
project/: .env.example  pyproject.toml  rules.yaml
project/src/maildrop/: cli.py  config.py  health.py  imap_client.py  models.py  rules.py  scanner.py  state.py  storage.py
project/tests/: test_config.py  test_health.py  test_rules.py  test_scanner.py  test_state.py
